public/stylesheets/main.css
body {
  margin-top: 50px;
 color: rgb(60, 60, 60);
 font-family: 'Raleway', sans-serif;
}

.table {
    word-wrap: break-word;
}

dl {
  word-wrap: break-word;
}

.links-break {
  word-break: break-all;
}

.navbar {
  background-color: white;
}

.logo {
  height: 48px;
  position: fixed;
  top: 0;
}

.navbar-btn {
  color: rgb(60, 60, 60);
}

.page-header {
  border: none;
}

.landing-page {
  height: 100vh;
  width: 100%;
  background-image: url(../images/background.jpeg);
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  background-repeat: no-repeat;
  color: white;
}

.glyphicon-menu-down {
  font-size: 25px;
}

.marketing-image {
  border: 1px solid rgb(60, 60, 60);
  padding: 8px;
}

.profile-picture {
  margin-bottom: 5%;
}

label {
  margin-top: 5px;
}

.signup-preferences {
  font-weight: normal;
}

.signup-previous {
  margin: 4px;
}

.preference-box {
  margin: 0;
}

.btn:focus {
  box-shadow: none;
}

#panel {
  padding: 0;
}

.faq-questions p {
  padding-bottom: 20px;

}

/* ----- MARKETING ----- */

.marketing {
  padding-top: 50px;
  padding-bottom: 50px;
}

.box-one p, .box-two p, .about-header p, .contact-header p {
  padding-bottom: 50px;
  font-size: 16px;
}

.marketing .col-lg-4 {
  margin-bottom: 20px;
  text-align: center;
}
.marketing h2 {
  font-weight: normal;
  font-size: 24px;

}
.marketing .col-lg-4 p, .form-submit p {
  margin-right: 10px;
  margin-left: 10px;
  font-size: 14px;
}

/* ----- MARKETING ----- */

.contact-us {
  width: 100%;
  background-image: url(../images/background.jpeg);
  background-size: cover;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  color: white;
  padding-top: 80px;
  padding-bottom: 80px;
  border: none;
}


/* ----- FOOTER ----- */

.footer {
  color: rgb(150, 150, 150);
}

@media (max-width:768px) {
  .landing-page {
    background-size: auto;
  }

  .contact-us {
    background-size: auto;
  }
}

